plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id("com.github.johnrengelman.shadow") version "8.1.1"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

forgeVersion = "1.20.1"

minecraft {
    mappings channel: 'official', version: '1.20.1'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {}

dependencies {
    minecraft "net.minecraftforge:forge:1.20.1-47.1.44"

    implementation 'pixelmon:Pixelmon-1.20.1-9.2.3-server:9.2.3'

    implementation group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'

    shadow group: 'com.envyful.api', name: 'commons', version: '5.4.8'
    shadow (group: 'com.envyful.api', name: 'forge20', version: '5.4.8') {
        transitive = false;
    }
    shadow (group: 'com.envyful.api', name: 'reforged20', version: '5.4.8') {
        transitive = false;
    }
}

shadowJar {
    configurations = [project.configurations.shadow]
    setArchiveClassifier('')
    setArchiveBaseName("${rootProject.name}-Forge")

    relocate('org.spongepowered.configurate', 'com.envyful.pixel.hunt.remastered.forge.shade.configurate')
    relocate('org.yaml.snakeyaml', 'com.envyful.pixel.hunt.remastered.forge.shade.snakeyaml')
    relocate('io.leangen.geantyref', 'com.envyful.pixel.hunt.remastered.forge.shade.geantyref')
    relocate('com.google.gson', 'com.envyful.pixel.hunt.remastered.forge.shade.gson')
    relocate('com.zaxxer', 'com.envyful.pixel.hunt.remastered.forge.shade.hikari')
    relocate('org.slf4j', 'com.envyful.pixel.hunt.remastered.forge.shade.slf4j')
    relocate('com.envyful.api', 'com.envyful.pixel.hunt.remastered.forge.shade.envy.api')
    relocate('org.bstats', 'com.envyful.pixel.hunt.remastered.forge.shade.bstats')
    relocate('com.google.common', 'com.envyful.pixel.hunt.remastered.forge.shade.guava')
    relocate('org.apache.logging', 'com.envyful.pixel.hunt.remastered.forge.shade.log4j')
    relocate('io.netty', 'com.envyful.pixel.hunt.remastered.forge.shade.netty')
    relocate('io.lettuce', 'com.envyful.pixel.hunt.remastered.forge.shade.lettuce')
    relocate('com.cronutils', 'com.envyful.pixel.hunt.remastered.forge.shade.cronutils')
    relocate('com.cronutils', 'com.envyful.pixel.hunt.remastered.forge.shade.cronutils')
    relocate('com.sun.el', 'com.envyful.pixel.hunt.remastered.forge.shade.sun.el')
    relocate('javax', 'com.envyful.pixel.hunt.remastered.forge.shade.javax')
    relocate('javax', 'com.envyful.pixel.hunt.remastered.forge.shade.javax')
    relocate('org.reactivestreams', 'com.envyful.pixel.hunt.remastered.forge.shade.reactivestreams')
    relocate('reactor', 'com.envyful.pixel.hunt.remastered.forge.shade.reactor')

    exclude "**/module-info.class"
    exclude "**/*.properties"
    exclude "**/*.xml"
    exclude "META-INF/versions/9/**"
    exclude "META-INF/native-image/**"
    exclude "META-INF/services/**"
}

jar.finalizedBy('shadowJar')
shadowJar.finalizedBy('reobfJar')
build.finalizedBy('versionedRelease')